2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
	short-circuit was preventing `accept-process-output' being called.

2008-11-10  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-diff-with-diff): use relative file
	names and call the `diff-command' directly so we can format its
	labels
	(clearcase-diff-with-cleartool): use relative filenames in the
	diff.

2008-09-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el: 379 version was renamed to revision in the entire file.
	(ucm-show-diff-link-handler): call `ucm-actb-show-diff'
	(ucm-actb-file-optimize-revisions): new function
	(ucm-actb-revision): new slot: previous^
	(ucm-actb-revision-previous): new function
	(ucm-actb-show-diff): new function
	(ucm-actb-optimize-display-command): new function
	(ucm-actb-revision): new slot: COUNT
	(ucm-actb-revision-pp): display the number of revisions if more
	than 1.
	(ucm-actb-file-optimize-revisions): update the COUNT slot of each
	revision
	(ucm-actb-revision-pp): don't print a + sign

2008-09-08  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-refresh-files): use `revert-buffer'
	(vc-clearcase-diff): 380 allow nil REV1, meaning compare a
	checkout with its predecessor.

2008-09-04  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-refresh-files): 378 use
	`vc-mode-line' and `vc-resynch-buffer' to refresh the vc state
 
2008-09-04  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-create-ewoc): 375 add the stream to the ewoc
	header.

2008-09-02  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): accept a nil `tid' as an
	argument.
	(clearcase-fprop): new slots: activity^, activity-tid^, renamed
	comment^ and comment-tid^ from comment and comment-tid.
	(clearcase-reset-fprop): clear comment-tid^, comment^,