@@ -1,3 +1,8 @@
+2009-12-30  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el, ucm.el: updated project website and maintainer
+	address
+
 2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
